5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1758_1580.log
== TEST (2019-05-27 18:50:15) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")


print(alunos[0:6])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:52:49) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

if (notas[] < 0):
	print("faltou")
	
-- ERROR:
File "XXXX", line 6
    if (notas[] < 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 18:53:05) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

if (notas < 0):
	print("faltou")
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:40:34) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

i = 0
x = 0
y = 0
f = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
	
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:41:01) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

i = 0
x = 0
y = 0
f = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
	
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 19:41:13) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

i = 0
x = 0
y = 0
f = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
	
print(f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:09:14) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1

z = 0	
apro = 0

while (z < size(notas)):
	if(notas[x] < 6):
		x = x + 1
	elif(notas [x] >= 6):
		apro = apro + 1
		x = x + 1
	z = z + 1


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:11:45) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	elif(notas[x] < 6):
		x = x + 1
		rep = rep + 1
	elif(notas [x] >= 6):
		apro = apro + 1
		x = x + 1

		
		
		
print(f)
print(apro)
print(rep)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:12:54) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	elif(notas[x] < 6):
		x = x + 1
		rep = rep + 1
	elif(notas [x] >= 6):
		apro = apro + 1
		x = x + 1

		
		
		
print(f)
print(apro)
print(rep)
	


	

-- ERROR:
File "XXXX", line 14
    elif(notas [x] < 0):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:13:00) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas [x] < 0):
		f = f + 1
		x = x + 1
	elif(notas[x] < 6):
		x = x + 1
		rep = rep + 1
	elif(notas [x] >= 6):
		apro = apro + 1
		x = x + 1

		
		
		
print(f)
print(apro)
print(rep)
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:13:55) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)


		
		
		
		
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:14:32) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
	elif(notas[x] < 6):
		x = x + 1
		rep = rep + 1
	elif(notas [x] >= 6):
		apro = apro + 1
		x = x + 1

print(f)
		
		
		
		
		
	


	

-- ERROR:
File "XXXX", line 20
    elif(notas[x] < 6):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:14:58) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	
	elif(notas[x] < 6):
		x = x + 1
		rep = rep + 1
	elif(notas [x] >= 6):
		apro = apro + 1
		x = x + 1
	i = i + 1
print(f)
		
		
		
		
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:15:20) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	
	elif(notas[x] < 6):
		x = x + 1
		rep = rep + 1
	elif(notas [x] >= 6):
		apro = apro + 1
		x = x + 1
	i = i + 1
print(f)
print(apro)
		
		
		
		
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:16:01) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	
	elif(notas[x] < 6):
		x = x + 1
		rep = rep + 1
	elif(notas [x] >= 6):
		apro = apro + 1
		x = x + 1
	i = i + 1
print(f)
print(apro)
		
		
		
		
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:17:33) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
while (z < size(notas)):
	if(notas[x] < 6):
		x = x + 1
		rep = rep + 1
	elif(notas [x] >= 6):
		apro = apro + 1
		x = x + 1
	z = z + 1
print(f)
print(apro)
		
		
		
		
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:18:09) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
while (z < size(notas)):
	if(notas[x] < 6):
		x = x + 1
		rep = rep + 1
	elif(notas [x] >= 6):
		apro = apro + 1
		x = x + 1
	z = z + 1
print(f)
print(apro)
		
		
		
		
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:18:20) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
while (z < size(notas)):
	if(notas[z] < 6):
		x = x + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		x = x + 1
	z = z + 1
print(f)
print(apro)
		
		
		
		
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:18:56) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1

print(f)

		
		
		
		
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:19:53) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")

rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas

while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)

		
		
		
		
		
	


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:21:59) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1


	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:22:34) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:23:36) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)
print(sum(notas)/size(notas))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:27:21) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
		soma = sum(notas)
		
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)
print(soma)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:30:25) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)
print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:30:54) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:31:35) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6 ):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:32:18) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6 ):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:32:51) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:29) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)
print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:33:48) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)
print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:34:14) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)
print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:34:29) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1
	
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)
print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:36:32) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1	
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1

	elif(notas[x] < 6 and notas[x] >= 0):
		x = x + 1
		rep = rep + 1
	elif(notas [x] >= 6):
		apro = apro + 1
		x = x + 1
	i = i + 1
print(apro)
print(rep)
print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:37:00) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1	
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1

	elif(notas[x] < 6 and notas[x] >= 0):
		x = x + 1
		rep = rep + 1
	elif(notas [x] >= 6):
		apro = apro + 1
		x = x + 1
	i = i + 1
print(f)
print(apro)
print(rep)
print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:37:36) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0
while (i < size(notas)):
	if(notas[x] > 0):
		x = x + 1	
	elif(notas [x] < 0):
		f = f + 1
		x = x + 1
	i = i + 1
print(f)
while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)
print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:39:16) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	elif (notas[z] > 0):
		f = f + 1
		z = z + 1
	h = h + 1
print(apro)
print(rep)
print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:39:42) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
i = 0
x = 0  
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	elif (notas[z] > 0):
		f = f + 1
		z = z + 1
	h = h + 1
print(f)
print(apro)
print(rep)
print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:40:48) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	elif (notas[z] > 0):
		f = f + 1
		z = z + 1
	h = h + 1
print(f)
print(apro)
print(rep)
print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:41:29) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[z] < 6 and notas[z] >= 0):
		z = z + 1
		rep = rep + 1
	elif(notas [z] >= 6):
		apro = apro + 1
		z = z + 1
	elif (notas[z] > 0):
		f = f + 1
		z = z + 1
	h = h + 1
print(f)
print(apro)
print(rep)
print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:43:11) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] > 0):
		f = f + 1
	h = h + 1
	print(f)
	print(apro)
	print(rep)
	print((sum(notas)+(f*(-1)))/size(notas))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:44:10) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] > 0):
		f = f + 1
	h = h + 1
	print(f, "faltaram")
	print(apro, "aprovados")
	print(rep, "reprovados")
	print((sum(notas)+(f*(-1)))/size(notas), "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:45:11) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] > 0):
		f = f + 1
	h = h + 1
print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print((sum(notas)+(f*(-1)))/size(notas), "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:45:35) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print((sum(notas)+(f*(-1)))/size(notas), "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:46:35) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas)
print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print((media, "media")



-- ERROR:
File "XXXX", line 27
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:46:43) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1

print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print((media, "media")



-- ERROR:
File "XXXX", line 27
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:46:59) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas)
print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print(media, "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:47:43) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas) + (f*(-1))
print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print(media, "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:48:06) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas) + (f*(-1))
print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print(media, "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:48:18) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas) + (f*(-1))
print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print(media, "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:48:58) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas) - f
print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print(media, "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:50:11) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas) + f*(-1)
print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print(media, "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:50:34) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas) + f
print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print(media, "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:51:03) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas) + f
print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print(media/size(notas), "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:52:11) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas) + f
div = notas(h - f)
print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print(div, "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:52:49) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas) + f
t = h - f
div = notas(t)

print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print(div, "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:53:31) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas) + f
div = size(notas) - f

print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print(div, "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:53:50) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0

while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1
media = sum(notas) + f
div = size(notas) - f

print(f, "faltaram")
print(apro, "aprovados")
print(rep, "reprovados")
print(media/div, "media")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:09:31) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0
k = 0
while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	elif (max(notas) != notas[h]):
		k = k + 1
	h = h + 1

print(k)
media = sum(notas) + f
div = size(notas) - f

print(f)
print(apro)
print(rep)
print(round(media/div, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:43) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0
k = 0
j = 0
while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1

while(max(notas) != notas[j]):
	k = k + 1
	j = j + 1
	
media = sum(notas) + f
div = size(notas) - f

print(f)
print(apro)
print(rep)
print(round(media/div, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:12:56) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0
k = 0
j = 0
while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1

while(max(notas) != notas[j]):
	k = k + 1
	j = j + 1
	
media = sum(notas) + f
div = size(notas) - f


print(k)
print(f)
print(apro)
print(rep)
print(round(media/div, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:14:02) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0
k = 0
j = 0
while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1

while(max(notas) != notas[j]):
	k = k + 1
	j = j + 1
	
media = sum(notas) + f
div = size(notas) - f



print(f)
print(apro)
print(rep)
print(round(media/div, 2))
print(alunos[k:])




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:14:16) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = input("Alunos :")
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0
k = 0
j = 0
while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1

while(max(notas) != notas[j]):
	k = k + 1
	j = j + 1
	
media = sum(notas) + f
div = size(notas) - f



print(f)
print(apro)
print(rep)
print(round(media/div, 2))
print(alunos[k:])




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:18:20) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos :")))
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0
k = 0
j = 0
while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1

while(max(notas) != notas[j]):
	k = k + 1
	j = j + 1
	
media = sum(notas) + f
div = size(notas) - f



print(f)
print(apro)
print(rep)
print(round(media/div, 2))
print(alunos[k:])




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:18:59) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos :")))
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0
k = 0
j = 0
while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1

while(max(notas) != notas[j]):
	k = k + 1
	j = j + 1
	
media = sum(notas) + f
div = size(notas) - f



print(f)
print(apro)
print(rep)
print(round(media/div, 2))
print(alunos[k:])




-- EXECUTION TIME:
0.462535
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
['A' 'B' 'C' 'D' 'E' 'F' 'G' 'H' 'I' 'J' 'K' 'L']
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
['JULIA' 'KARLA']
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
['HELOISA' 'IRIS' 'JULIA' 'KARLA']
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:20:08) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos :")))
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0
k = 0
j = 0
while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1

while(max(notas) != notas[j]):
	k = k + 1
	j = j + 1
	
media = sum(notas) + f
div = size(notas) - f



print(f)
print(apro)
print(rep)
print(round(media/div, 2))
print(alunos[k:])




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:20:32) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos :")))
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0
k = 0
j = 0
while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1

while(max(notas) != notas[j]):
	k = k + 1
	j = j + 1
	
media = sum(notas) + f
div = size(notas) - f



print(f)
print(apro)
print(rep)
print(round(media/div, 2))
print(alunos[k:])




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:22:16) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos :")))
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0
k = 0
j = 0
while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1

while(max(notas) != notas[j]):
	k = k + 1
	j = j + 1
	
media = sum(notas) + f
div = size(notas) - f



print(f)
print(apro)
print(rep)
print(round(media/div, 2))
print(alunos[k:])




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:22:55) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos :")))
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0
k = 0
j = 0
while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1

while(max(notas) != notas[j]):
	k = k + 1
	j = j + 1
	
media = sum(notas) + f
div = size(notas) - f



print(f)
print(apro)
print(rep)
print(round(media/div, 2))
print(alunos[k])




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:23:29) 
-- CODE:
from numpy import*

notas = array(eval(input("Notas: ")))
alunos = array(eval(input("Alunos :")))
z = 0
rep = 0
apro = 0
y = 0
f = 0      #Faltas
h = 0
k = 0
j = 0
while (h < size(notas)):
	if(notas[h] < 6 and notas[h] >= 0):
		rep = rep + 1
	elif(notas [h] >= 6):
		apro = apro + 1
	elif (notas[h] < 0):
		f = f + 1
	h = h + 1

while(max(notas) != notas[j]):
	k = k + 1
	j = j + 1
	
media = sum(notas) + f
div = size(notas) - f



print(f)
print(apro)
print(rep)
print(round(media/div, 2))
print(alunos[k])




-- EXECUTION TIME:
0.402919
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
